fix link + Layout Confirm Dialog

--- a/Web/ResellTicketSolution/WebClient.Customer/bank/createSuccessBankAccount.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/bank/createSuccessBankAccount.html
@@ -10,11 +10,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
     <title>Big store a Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | Register ::
         w3layouts</title>
-    <link href="./../css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <link href="./../css/style.css" rel='stylesheet' type='text/css' />
-    <link href="./../css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="./../css/jstarbox.css" type="text/css" media="screen" charset="utf-8" />
-    <link rel="manifest" href="./../manifest.json">
+    <link href="/css/bootstrap.css" rel='stylesheet' type='text/css' />
+    <link href="/css/style.css" rel='stylesheet' type='text/css' />
+    <link href="/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/jstarbox.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="manifest" href="/manifest.json">
     <style>
         ::placeholder {
             color: #999;
@@ -34,13 +34,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </style>
     <!-- js -->
     <script src="https://js.stripe.com/v2/"></script>
-    <script src="./../js/jquery-1.11.1.min.js"></script>
-    <script src="./../js/jstarbox.js"></script>
-    <script type="text/javascript" src="./../helper/Api.js"></script>
+    <script src="/js/jquery-1.11.1.min.js"></script>
+    <script src="/js/jstarbox.js"></script>
+    <script type="text/javascript" src="/helper/Api.js"></script>
     <!-- <script type="text/javascript" src="./../constant/BasrUrl.js"></script> -->
-    <script type="text/javascript" src="./../js/authen.js"></script>
-    <script type="text/javascript" src="./../js/card.js"></script>
-    <script src="./../js/bootstrap.js"></script>
+    <script type="text/javascript" src="/js/authen.js"></script>
+    <script type="text/javascript" src="/js/card.js"></script>
+    <script src="/js/bootstrap.js"></script>
     <script type="module" src="/bank/displayConnectBankButton.js"></script>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 
@@ -70,17 +70,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
 
             <div class="logo">
-                <h1><a href="./../index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel
+                <h1><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel
                             marketplace</span></a>
                 </h1>
             </div>
             <div class="head-t" id="isLoggin">
                 <ul class="card">
                     <li>
-                        <h4><a href="./../login.html"><i class="fa fa-user" aria-hidden="true"></i>Login</a></h4>
+                        <h4><a href="/login.html"><i class="fa fa-user" aria-hidden="true"></i>Login</a></h4>
                     </li>
                     <li>
-                        <h4><a href="./../checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a>
+                        <h4><a href="/checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a>
                         </h4>
                     </li>
                 </ul>
@@ -91,11 +91,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <h4>Welcome <span id="welcome-name"></span>!!!</h4>
                     </li>
                     <li>
-                        <h4><a href="./../index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
+                        <h4><a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
                         </h4>
                     </li>
                     <li>
-                        <h4><a onclick="logout()" href="./../index.html"><i class="fa fa-sign-out"
+                        <h4><a onclick="logout()" href="/index.html"><i class="fa fa-sign-out"
                                     aria-hidden="true"></i>Logout</a></h4>
                     </li>
                 </ul>
@@ -177,7 +177,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="footer">
         <div class="container">
             <div class="footer-bottom">
-                <h2><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
+                <h2><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
                 </h2>
                 <p class="fo-para">Bringing people with unwanted travel plans together with those wanting incredible
                     last-minute deals. Welcome to a world of opportunities.</p>
