--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
@@ -56,7 +56,7 @@
 <script src="./postedTicket_2.js" type="module"></script>
 <script src="../helper/Api.js"></script>
 
-<body onload="checkLogin()">
+<body onload="checkLogin();checkLoginProfile();">
     <div class="header">
         <div class="container">
             <div class="logo">
