--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
@@ -36,16 +36,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="header">
 		<div class="container">
 			<div class="logo">
-				<h1><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
+				<h1><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
 				</h1>
 			</div>
 			<div class="head-t" id="isLoggin">
 				<ul class="card">
 					<li>
-						<h4><a href="login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
+						<h4><a href="/login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
 					</li>
 					<li>
-						<h4><a href="checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
+						<h4><a href="/checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
 					</li>
 				</ul>
 			</div>
@@ -55,11 +55,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h4>Welcome <span id="welcome-name"></span>!!!</h4>
 					</li>
 					<li>
-						<h4><a href="updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
+						<h4><a href="/updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
 						</h4>
 					</li>
 					<li>
-						<h4><a onclick="logout()" href="index.html"><i class="fa fa-sign-out"
+						<h4><a onclick="logout()" href="/index.html"><i class="fa fa-sign-out"
 									aria-hidden="true"></i>Logout</a></h4>
 					</li>
 				</ul>
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="banner-top">
 		<div class="container">
 			<h3>Route Detail</h3>
-			<h4><a href="./../index.html">Home</a><label>/</label>Route Detail</h4>
+			<h4><a href="/index.html">Home</a><label>/</label>Route Detail</h4>
 			<div class="clearfix"> </div>
 		</div>
 	</div>
@@ -192,7 +192,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="footer">
 		<div class="container">
 			<div class="footer-bottom">
-				<h2><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
+				<h2><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
 				</h2>
 				<p class="fo-para">Bringing people with unwanted travel plans together with those wanting incredible
 					last-minute deals. Welcome to a world of opportunities.</p>
