--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeUpdate.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeUpdate.html
@@ -31,21 +31,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //js -->
 </head>
 
-<body onload="checkLogin()">
+<body onload="checkLogin();checkLoginProfile();">
 
 	<div class="header">
 		<div class="container">
 			<div class="logo">
-				<h1><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
+				<h1><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
 				</h1>
 			</div>
 			<div class="head-t" id="isLoggin">
 				<ul class="card">
 					<li>
-						<h4><a href="login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
+						<h4><a href="/login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
 					</li>
 					<li>
-						<h4><a href="checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
+						<h4><a href="/checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
 					</li>
 				</ul>
 			</div>
@@ -55,11 +55,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h4>Welcome <span id="welcome-name"></span>!!!</h4>
 					</li>
 					<li>
-						<h4><a href="updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
+						<h4><a href="/updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
 						</h4>
 					</li>
 					<li>
-						<h4><a onclick="logout()" href="index.html"><i class="fa fa-sign-out"
+						<h4><a onclick="logout()" href="/index.html"><i class="fa fa-sign-out"
 									aria-hidden="true"></i>Logout</a></h4>
 					</li>
 				</ul>
