--- a/Web/ResellTicketSolution/WebClient.Customer/creditCard/createCreditCardView.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/creditCard/createCreditCardView.html
@@ -70,17 +70,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
 
             <div class="logo">
-                <h1><a href="./../index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel
+                <h1><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel
                             marketplace</span></a>
                 </h1>
             </div>
             <div class="head-t" id="isLoggin">
                 <ul class="card">
                     <li>
-                        <h4><a href="./../login.html"><i class="fa fa-user" aria-hidden="true"></i>Login</a></h4>
+                        <h4><a href="/login.html"><i class="fa fa-user" aria-hidden="true"></i>Login</a></h4>
                     </li>
                     <li>
-                        <h4><a href="./../checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a>
+                        <h4><a href="/checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a>
                         </h4>
                     </li>
                 </ul>
@@ -91,11 +91,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <h4>Welcome <span id="welcome-name"></span>!!!</h4>
                     </li>
                     <li>
-                        <h4><a href="./../index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
+                        <h4><a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
                         </h4>
                     </li>
                     <li>
-                        <h4><a onclick="logout()" href="./../index.html"><i class="fa fa-sign-out"
+                        <h4><a onclick="logout()" href="/index.html"><i class="fa fa-sign-out"
                                     aria-hidden="true"></i>Logout</a></h4>
                     </li>
                 </ul>
@@ -263,7 +263,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="footer">
         <div class="container">
             <div class="footer-bottom">
-                <h2><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
+                <h2><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
                 </h2>
                 <p class="fo-para">Bringing people with unwanted travel plans together with those wanting incredible
                     last-minute deals. Welcome to a world of opportunities.</p>
