--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
@@ -36,16 +36,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="header">
         <div class="container">
             <div class="logo">
-                <h1><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
+                <h1><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
                 </h1>
             </div>
             <div class="head-t" id="isLoggin">
                 <ul class="card">
                     <li>
-                        <h4><a href="login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
+                        <h4><a href="/login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
                     </li>
                     <li>
-                        <h4><a href="checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
+                        <h4><a href="/checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
                     </li>
                 </ul>
             </div>
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="banner-top">
         <div class="container">
             <h3>Search Route</h3>
-            <h4><a href="./../index.html">Home</a><label>/</label>Search Route</h4>
+            <h4><a href="/index.html">Home</a><label>/</label>Search Route</h4>
             <div class="clearfix"> </div>
         </div>
     </div>
@@ -146,7 +146,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="footer">
         <div class="container">
             <div class="footer-bottom">
-                <h2><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
+                <h2><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
                 </h2>
                 <p class="fo-para">Bringing people with unwanted travel plans together with those wanting incredible
                     last-minute deals. Welcome to a world of opportunities.</p>
