--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
@@ -31,20 +31,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //js -->
 </head>
 
-<body onload="checkLogin()">
+<body onload="checkLogin();checkLoginProfile();">
 	<div class="header">
 		<div class="container">
 			<div class="logo">
-				<h1><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
+				<h1><a href="/index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
 				</h1>
 			</div>
 			<div class="head-t" id="isLoggin">
 				<ul class="card">
 					<li>
-						<h4><a href="login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
+						<h4><a href="/login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
 					</li>
 					<li>
-						<h4><a href="checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
+						<h4><a href="/checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
 					</li>
 				</ul>
 			</div>
@@ -54,11 +54,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h4>Welcome <span id="welcome-name"></span>!!!</h4>
 					</li>
 					<li>
-						<h4><a href="updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
+						<h4><a href="/updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
 						</h4>
 					</li>
 					<li>
-						<h4><a onclick="logout()" href="index.html"><i class="fa fa-sign-out"
+						<h4><a onclick="logout()" href="/index.html"><i class="fa fa-sign-out"
 									aria-hidden="true"></i>Logout</a></h4>
 					</li>
 				</ul>
@@ -92,8 +92,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 						<ul class="nav navbar-nav ">
-							<li class="active"><a href="index.html" class="hyper "><span>Route</span></a></li>
-							<li><a href="codes.html" class="hyper"> <span>Tour</span></a></li>
+							<li class="active"><a href="/index.html" class="hyper "><span>Route</span></a></li>
+							<li><a href="/codes.html" class="hyper"> <span>Tour</span></a></li>
 						</ul>
 					</div>
 				</nav>
@@ -108,7 +108,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="banner-top">
 		<div class="container">
 			<h3>Search Route</h3>
-			<h4><a href="./../index.html">Home</a><label>/</label>Search Route</h4>
+			<h4><a href="/index.html">Home</a><label>/</label>Search Route</h4>
 			<div class="clearfix"> </div>
 		</div>
 	</div>
