RT-046: refactor top bar index.html

--- a/Web/ResellTicketSolution/WebClient.Customer/login.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/login.html
@@ -166,6 +166,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				var responeData = await respone.json();
 				console.log("responeData: ", responeData.token);
 				localStorage.setItem('USERNAME', responeData.username);
+				localStorage.setItem('FULLNAME', responeData.fullName);
 				localStorage.setItem('TOKEN', responeData.token);
 				localStorage.setItem('PHONENUMBER', responeData.phoneNumber);
 				localStorage.setItem('ID', responeData.id.toString());
