RT-046: Add notifications into all page of web customer

--- a/Web/ResellTicketSolution/WebClient.Customer/ResetPassword.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/ResetPassword.html
@@ -95,6 +95,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		}
 	</style>
 	<script type="text/javascript" src="constant/BasrUrl.js"></script>
+	<script type="text/javascript" src="/js/moment.js"></script>
+	<script type="module" src="/js/top-bar.js"></script>
 </head>
 
 <body>
@@ -106,12 +108,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<h1><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
 				</h1>
 			</div>
-			<div class="head-t">
-				<ul class="card">
-					<li><a href="login.html"><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
-					<li><a href="ResetPassword.html"><i class="fa fa-arrow-right" aria-hidden="true"></i>Reset
-							Password</a></li>
-				</ul>
+			<div class="head-t" id="top-bar-container">
 			</div>
 
 			<div class="header-ri">
