--- a/Web/ResellTicketSolution/WebClient.Customer/login.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/login.html
@@ -66,6 +66,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			max-width: 400px;
 		}
 	</style>
+	<script type="text/javascript" src="/js/moment.js"></script>
+	<script type="module" src="/js/top-bar.js"></script>
 </head>
 
 <body>
@@ -77,10 +79,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h1><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
 				</h1>
 			</div>
-			<div class="head-t">
-				<ul class="card">
-					<li><a href="login.html"><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
-				</ul>
+			<div class="head-t" id="top-bar-container">
 			</div>
 
 			<div class="header-ri">
