--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -67,6 +67,7 @@
     <!-- <script src="./postedTicket.js" type="text/babel"></script> -->
     <!-- <script src="../helper/Api.js"></script> -->
     <script src="./postEditTicket_2.js" type="module"></script>
+	<script type="module" src="/js/top-bar.js"></script>
     <!-- //js -->
 </head>
 
@@ -79,23 +80,8 @@
                             marketplace</span></a>
                 </h1>
             </div>
-            <div class="head-t" id="isLoggin"></div>
-
-            <div class="head-t" id="showing-option">
-                <ul class="card">
-                    <li>
-                        <h4>Welcome <span id="welcome-name"></span>!!!</h4>
-                    </li>
-                    <li>
-                        <h4><a href="../updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
-                        </h4>
-                    </li>
-                    <li>
-                        <h4><a onclick="logout()" href="../index.html"><i class="fa fa-sign-out"
-                                    aria-hidden="true"></i>Logout</a></h4>
-                    </li>
-                </ul>
-            </div>
+			<div class="head-t" id="top-bar-container">
+			</div>
 
             <div class="header-ri">
                 <ul class="social-top">
