--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
@@ -28,10 +28,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script type="text/javascript" src="./../js/moment.js"></script>
     <script src="./../js/numeral.min.js"></script>
     <script type="module" src="./searchResult.js"></script>
+	<script type="module" src="/js/top-bar.js"></script>
     <!-- //js -->
 </head>
 
-<body onload="checkLogin();checkLoginProfile();">
+<body onload="checkLoginProfile();">
 
     <div class="header">
         <div class="container">
@@ -39,31 +40,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <h1><a href="index.html"><b>T<br>H<br>E</b>Resell Ticket<span>The world's travel marketplace</span></a>
                 </h1>
             </div>
-            <div class="head-t" id="isLoggin">
-                <ul class="card">
-                    <li>
-                        <h4><a href="login.html"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</a></h4>
-                    </li>
-                    <li>
-                        <h4><a href="checkPhoneNo.html"><i class="fa fa-key" aria-hidden="true"></i>Register</a></h4>
-                    </li>
-                </ul>
-            </div>
-            <div class="head-t" id="showing-option">
-                <ul class="card">
-                    <li>
-                        <h4>Welcome <span id="welcome-name"></span>!!!</h4>
-                    </li>
-                    <li>
-                        <h4><a href="/updateProfile.html"><i class="fa fa-user" aria-hidden="true"></i>Me</a>
-                        </h4>
-                    </li>
-                    <li>
-                        <h4><a onclick="logout()" href="/index.html"><i class="fa fa-sign-out"
-                                    aria-hidden="true"></i>Logout</a></h4>
-                    </li>
-                </ul>
-            </div>
+			<div class="head-t" id="top-bar-container">
+			</div>
 
             <div class="header-ri">
                 <ul class="social-top">
