fix layout confirm

--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
@@ -132,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="row margin-bottom-20">
 			<div class="col-sm-12 text-center">
-				<button class="btn btn-lg btn-warning" id="btn-delete">Delete</button>
+				<button class="btn btn-lg btn-danger" id="btn-delete">Delete</button>
 				<button class="btn btn-lg btn-info" id="btn-buy">Buy</button>
 			</div>
 		</div>
