--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchRouteForm.html
@@ -32,7 +32,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //js -->
 </head>
 
-<body onload="checkLogin();">
+<body>
 	<div class="header">
 		<div class="container">
 			<div class="logo">
