--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -72,7 +72,7 @@
 </head>
 
 
-<body onload="checkLogin();checkLoginProfile();">
+<body onload="checkLoginProfile();">
     <div class="header">
         <div class="container">
             <div class="logo">
