RT-122: Add Loading Indicator in web customer

--- a/Web/ResellTicketSolution/WebClient.Customer/index.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/index.html
@@ -24,7 +24,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="js/jstarbox.js"></script>
 	<script type="text/javascript" src="js/authen.js"></script>
 	<script src="js/jquery-1.11.1.min.js"></script>
-
+	<script src="/js/lib/pace.min.js"></script>
+	
 	<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 	<script type="module">
 		import { appConfig } from './constant/appConfig.js';
