--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -43,6 +43,7 @@
     <script src="../js/jquery-1.11.1.min.js"></script>
     <script src="../js/moment.js"></script>
     <script src="../js/bootstrap.js"></script>
+	<script src="/js/lib/pace.min.js"></script>
     <script src="../helper/convertStatus.js"></script>
     <script src="../js/numeral.min.js"></script>
     <script src="../js/bootstrap-datetimepicker.min.js"></script>
