--- a/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/searchResult.html
@@ -22,6 +22,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- css -->
 
     <!-- js -->
+	<script src="/js/lib/pace.min.js"></script>
     <script src="./../js/jquery-1.11.1.min.js"></script>
     <script src="./../js/jstarbox.js"></script>
     <script type="text/javascript" src="./../js/authen.js"></script>
