--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -38,6 +38,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script type="text/javascript" src="constant/BasrUrl.js"></script>
     <script type="text/javascript" src="js/authen.js"></script>
     <script src="js/bootstrap.js"></script>
+	<script src="/js/lib/pace.min.js"></script>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script type="module" src="/bank/createSttripeConnectBankAccount.js"></script>
     <script type="module" src="/bank/displayConnectBankButton.js"></script>
