--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeUpdate.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeUpdate.html
@@ -21,6 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<link href="./../css/rt-style.css" rel='stylesheet' type='text/css' />
 	<!-- css -->
 
+	<script src="/js/lib/pace.min.js"></script>
 	<!-- js -->
 	<script src="./../js/jquery-1.11.1.min.js"></script>
 	<script src="./../js/jstarbox.js"></script>
