--- a/Web/ResellTicketSolution/WebClient.Customer/template.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/template.html
@@ -20,6 +20,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- <link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" /> -->
 	<link href="./../css/rt-style.css" rel='stylesheet' type='text/css' />
 	<!-- css -->
+	<script src="/js/lib/pace.min.js"></script>
 
 	<!-- js -->
 	<script src="./../js/jquery-1.11.1.min.js"></script>
