RT-114: Change Header color in index page

--- a/Web/ResellTicketSolution/WebClient.Customer/index.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/index.html
@@ -104,7 +104,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div data-vide-bg="images/index-background.png">
 		<div class="container">
 			<div class="banner-info">
-				<h3 style="color: #c7ad71">It is a long established fact that a reader will be distracted by
+				<h3 style="color: #795548; font-weight: 600;">It is a long established fact that a reader will be distracted by
 					the readable </h3>
 				<div class="search-form">
 					<input type="submit" value="Search Route" style="color: brown" id="btnSearchRoute">
