--- a/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
@@ -86,30 +86,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </ul>
             </div>
 
-
-            <div class="nav-top">
-                <nav class="navbar navbar-default">
-
-                    <div class="navbar-header nav_2">
-                        <button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse"
-                            data-target="#bs-megadropdown-tabs">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-
-
-                    </div>
-                    <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
-                        <ul class="nav navbar-nav ">
-                            <li class="active"><a href="index.html" class="hyper "><span>Route</span></a></li>
-                            <li><a href="codes.html" class="hyper"> <span>Tour</span></a></li>
-                        </ul>
-                    </div>
-                </nav>
-
-                <div class="clearfix"></div>
-            </div>
+			<div class="nav-top" id="nav-bar-container">
+			</div>
 
         </div>
     </div>
