--- a/Web/ResellTicketSolution/WebClient.Customer/register.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/register.html
@@ -112,29 +112,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</ul>
 			</div>
 
-
-			<div class="nav-top">
-				<nav class="navbar navbar-default">
-
-					<div class="navbar-header nav_2">
-						<button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse"
-							data-target="#bs-megadropdown-tabs">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-
-
-					</div>
-					<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
-						<ul class="nav navbar-nav ">
-							<li class="active"><a href="index.html" class="hyper "><span>Route</span></a></li>
-							<li><a href="codes.html" class="hyper"> <span>Tour</span></a></li>
-						</ul>
-					</div>
-				</nav>
-
-				<div class="clearfix"></div>
+			<div class="nav-top" id="nav-bar-container">
 			</div>
 
 		</div>
