fix bug number index in list transaction and add responsive

--- a/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
@@ -117,7 +117,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="main-agileits" style="width: 45%;">
             <div class="form-w3agile form">
                 <h3>View List Credit card</h3>
-                <table class="table table-striped">
+                <table class="table table-responsive table-striped">
                     <tbody id="credit-card-list">
                     </tbody>
                 </table>
