--- a/Web/ResellTicketSolution/WebClient.Customer/transaction/transaction.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/transaction/transaction.html
@@ -125,8 +125,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <th>#</th>
                             <th>Type</th>
                             <th>Description</th>
-                            <th style="	width: 15%;	min-width: 15%;	max-width: 20%;">Date</th>
-                            <th style="	width: 11%;">Amount</th>
+                            <th style="	width: 25%;">Date</th>
+                            <th style="	width: 10%;">Amount</th>
                         </tr>
                     </thead>
                     <tbody style="font-size: 20px" id="transaction-list">
