--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -128,36 +128,36 @@
                     <span id="invalidField"></span>
                     <form autocomplete="off" class="form-horizontal">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Vehicle</label>
                                 <!-- <i class="fa fa-" aria-hidden="true"></i> -->
                                 <select class="form-control" id="select-vehicle" style="height: 34px; width: 100%; ">
                                 </select>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Transportation</label>
                                 <div class="autocomplete" id="transportation">
                                     <!-- onkeyup="getTransportation()" -->
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Ticket Type</label>
                                 <div class="autocomplete" id="ticketType">
                                 </div>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 30px">
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Departure City</label>
                                 <div class="autocomplete" id="departureCity">
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Departure Station</label>
                                 <div class="autocomplete" id="departureStation">
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Departure Date:</label>
                                 <input type="text" placeholder="Departure Date" id="departureDate"
                                     class="form-control" />
@@ -165,37 +165,37 @@
                             </div>
                         </div>
                         <div class="row" style="margin-top: 30px">
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Arrival City:</label>
                                 <div class="autocomplete" id="arrivalCity">
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Arrival Station:</label>
                                 <div class="autocomplete" id="arrivalStation">
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-sm-4 col-md-4">
                                 <label>Arrival Date:</label>
                                 <input type="text" placeholder="Arrival Date" id="arrivalDate" class="form-control"
                                     disabled>
                             </div>
                         </div>
                         <div class="row" style="margin-top: 30px">
-                            <div class="col-md-3">
+                            <div class="col-sm-6 col-md-3">
                                 <label>Ticket Code:</label>
                                 <input type="text" placeholder="Ticket Code" id="ticketCode" class="form-control" />
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-sm-6 col-md-3">
                                 <label>Passenger Name:</label>
                                 <input type="text" placeholder="Passenger Name" id="passengerName"
                                     class="form-control" />
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-sm-6 col-md-3">
                                 <label>Email Booking:</label>
                                 <input type="text" placeholder="Email Booking" id="emailBooking" class="form-control" />
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-sm-6 col-md-3">
                                 <label>Selling Price:</label>
                                 <input type="text" placeholder="Selling Price" id="sellingPrice" class="form-control" />
                             </div>
