RT-126-131: logout in mobile + web, Edit Customer Website to display route resolve result

--- a/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/route/routeDetail.html
@@ -112,8 +112,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="row margin-bottom-20">
 			<div class="col-sm-12 text-center">
-				<button class="btn btn-lg btn-danger" id="btn-delete">Delete</button>
-				<button class="btn btn-lg btn-info" id="btn-buy">Buy</button>
+				<button class="btn btn-lg btn-danger" id="btn-delete" style="display: none">Delete</button>
+				<button class="btn btn-lg btn-info" id="btn-buy" style="display: none">Buy</button>
 			</div>
 		</div>
 	</div>
