RT-127: Create email refund

--- a/Web/ResellTicketSolution/WebAPI/EmailTemplate/EmailTemplateRefund.html
+++ b/Web/ResellTicketSolution/WebAPI/EmailTemplate/EmailTemplateRefund.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
     <meta content="width=device-width,initial-scale=1,user-scalable=no" name="viewport" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
     
+    
     <link href="https://cdn.invoicesimple.com/" rel="dns-prefetch" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
     <link href="https://cdn.invoicesimple.com/" rel="preconnect" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
     <link href="https://cdn.invoicesimple.com/manifest.json" rel="manifest" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
@@ -61,87 +62,37 @@ function isSnapshot() { return /reactsnap/i.test(navigator.userAgent) }function 
             <div class="invoice-detail-accent" style="background-color: rgb(2, 119, 189);-webkit-box-sizing: border-box;box-sizing: border-box;height: 16px;">
             </div>
             <div class="invoice-detail-body" style="-webkit-box-sizing: border-box;box-sizing: border-box;min-height: 1050px;display: block;padding: 0;padding-top: 32px;padding-bottom: 32px;position: relative;border: none!important;">
-                <div class="invoice-detail-title content-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-left: 16px;padding-right: 16px;">
-                    <div class="d-flex justify-content-between" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex!important;-ms-flex-pack: justify!important;justify-content: space-between!important;">
-                        <div class="invoice-title" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top: 30px;">
-                            <h2 style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: 0;margin-bottom: 30px;font-weight: 700;line-height: 1.2;font-size: 2rem;orphans: 3;widows: 3;page-break-after: avoid;text-rendering: optimizeLegibility;-moz-osx-font-smoothing: grayscale;font-smoothing: antialiased;-webkit-font-smoothing: antialiased;color: #555;width: 100%;display: inline-block;font-family: 'Open Sans',Helvetica,Arial,sans-serif!important;">
-                                <span data-selector="invoice-title" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
-                                    {Title}
-                                </span>
-                            </h2>
-                        </div>
-                        <div class="invoice-logo" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top: 30px;">
-                            <div class="photo-drop" style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-bottom: 30px;">
-                                <div class="photo-drop-preview" style="-webkit-box-sizing: border-box;box-sizing: border-box;min-height: auto;">
-                                    <img src="./Invoice Simple - Preview Invoice INV0002 - Resell Ticket_files/c8a3f680-a531-11e9-a179-6ffb1f9b4151.jpg" alt="" style="-webkit-box-sizing: border-box;box-sizing: border-box;vertical-align: middle;border-style: none;page-break-inside: avoid;width: 110px;">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="invoice-detail-header content-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-left: 16px;padding-right: 16px;">
+
+                <div class="invoice-detail-terms content-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top: 8px;padding-bottom: 16px;padding-left: 16px;padding-right: 16px;">
                     <div class="row" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;margin-right: -15px;margin-left: -15px;margin: 0;">
-                        <div class="col-md invoice-address invoice-address-company" style="-webkit-box-sizing: border-box;box-sizing: border-box;position: relative;width: 100%;padding-right: 15px;padding-left: 15px;padding-bottom: 16px;">
-                            <h3 style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;font-weight: 700;line-height: 1.2;font-size: 1.75rem;orphans: 3;widows: 3;page-break-after: avoid;text-rendering: optimizeLegibility;-moz-osx-font-smoothing: grayscale;font-smoothing: antialiased;-webkit-font-smoothing: antialiased;color: #555;font-family: 'Open Sans',Helvetica,Arial,sans-serif!important;">
-                                From
-                            </h3>
-                            <h4 style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: 0;margin-bottom: .5rem;font-weight: 700;line-height: 1.2;font-size: 1.5rem;text-rendering: optimizeLegibility;-moz-osx-font-smoothing: grayscale;font-smoothing: antialiased;-webkit-font-smoothing: antialiased;color: #555;font-family: 'Open Sans',Helvetica,Arial,sans-serif!important;">
-                                {fromName}
-                            </h4>
-                            <div class="preview-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: .4em;">
-                                {fromEmail}
+                        <div class="col-md-6 invoice-address invoice-address-terms" style="-webkit-box-sizing: border-box;box-sizing: border-box;position: relative;width: 100%;padding-right: 15px;padding-left: 15px;-ms-flex: 0 0 50%;flex: 0 0 50%;min-width:70%;max-width: 70%;">
+                            <div class="terms-item-view" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;padding: .1rem 0;">
+                                <span class="invoice-number-label" style="-webkit-box-sizing: border-box;box-sizing: border-box;">Dear</span><span class="invoice-number" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-left: 4%;min-width: 500px;max-width: 500px;">{customerName},</span>
                             </div>
-                            <div class="preview-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: .4em;">
-                                <div style="-webkit-box-sizing: border-box;box-sizing: border-box;">{Street}</div>
-                                <div style="-webkit-box-sizing: border-box;box-sizing: border-box;">
-                                    {City}
-                                </div>
-                                <div style="-webkit-box-sizing: border-box;box-sizing: border-box;">{addressNumber}</div>
+                            <div class="terms-item-view" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;padding: .1rem 0;">
+                                <span style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top:3%;">We've processed your refund, and you should expect to see the amount re-appear in your bank account in the next couple business days.</span>
                             </div>
-                            <div class="preview-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: .4em;">
-                                <span class="preview-label" title="Phone Number" style="-webkit-box-sizing: border-box;box-sizing: border-box;">P:</span><span class="preview-value" style="-webkit-box-sizing: border-box;box-sizing: border-box;"> {phoneNumber}</span>
+                            <div class="terms-item-view" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;padding: .1rem 0;">
+                                <span style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top:3%;">We are sorry about this inconvenience. We completely understand that it isn't for everyone.</span>
                             </div>
-                            <div class="preview-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: .4em;">
-                                <span class="preview-label" title="Business Number" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
-                                    Business
-                                    Number:
-                                </span><span class="preview-value" style="-webkit-box-sizing: border-box;box-sizing: border-box;"> {bussinessNumber}</span>
+                            <div class="terms-item-view" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;padding: .1rem 0;">
+                                <span style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top:3%;">Best Regard,</span>
                             </div>
-                        </div>
-                        <div class="col-md invoice-address invoice-address-client" style="-webkit-box-sizing: border-box;box-sizing: border-box;position: relative;width: 100%;padding-right: 15px;padding-left: 15px;padding-bottom: 16px;">
-                            <h3 style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;font-weight: 700;line-height: 1.2;font-size: 1.75rem;orphans: 3;widows: 3;page-break-after: avoid;text-rendering: optimizeLegibility;-moz-osx-font-smoothing: grayscale;font-smoothing: antialiased;-webkit-font-smoothing: antialiased;color: #555;font-family: 'Open Sans',Helvetica,Arial,sans-serif!important;">
-                                To
-                            </h3>
-                            <h4 style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: 0;margin-bottom: .5rem;font-weight: 700;line-height: 1.2;font-size: 1.5rem;text-rendering: optimizeLegibility;-moz-osx-font-smoothing: grayscale;font-smoothing: antialiased;-webkit-font-smoothing: antialiased;color: #555;font-family: 'Open Sans',Helvetica,Arial,sans-serif!important;">
-                                {customerName}
-                            </h4>
-                            <div class="preview-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: .4em;">
-                                {customerEmail}
-                            </div>
-                            <div class="preview-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: .4em;">
-                                <div style="-webkit-box-sizing: border-box;box-sizing: border-box;"></div>
-                                <div style="-webkit-box-sizing: border-box;box-sizing: border-box;"></div>
-                                <div style="-webkit-box-sizing: border-box;box-sizing: border-box;"></div>
-                            </div>
-                            <div class="preview-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: .4em;">
-                                <span class="preview-label" title="Phone Number" style="-webkit-box-sizing: border-box;box-sizing: border-box;">Phone:</span><span class="preview-value" style="-webkit-box-sizing: border-box;box-sizing: border-box;"> {customerPhone}</span>
+                            <div class="terms-item-view" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;padding: .1rem 0;">
+                                <span style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top:3%;">{fromName}</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <hr class="divider lite margin" style="-webkit-box-sizing: content-box;box-sizing: content-box;height: 0;overflow: visible;margin-top: 1rem;margin-bottom: 1rem;border: 0;border-top: 1px solid rgba(0,0,0,.1);margin: 8px 48px;">
-                <div class="invoice-detail-terms content-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top: 8px;padding-bottom: 16px;padding-left: 16px;padding-right: 16px;">
-                    <div class="row" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;margin-right: -15px;margin-left: -15px;margin: 0;">
-                        <div class="col-md-6 invoice-address invoice-address-terms" style="-webkit-box-sizing: border-box;box-sizing: border-box;position: relative;width: 100%;padding-right: 15px;padding-left: 15px;-ms-flex: 0 0 50%;flex: 0 0 50%;min-width:70%;max-width: 70%;">
-                            <div class="terms-item-view" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;padding: .1rem 0;">
-                                <span class="invoice-number-label" style="-webkit-box-sizing: border-box;box-sizing: border-box;">Ticket</span><span class="invoice-number" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-left: 12%;min-width: 500px;max-width: 500px;">{ticketCode}</span>
-                            </div>
-                            <div class="terms-item-view" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;padding: .1rem 0;">
-                                <span style="-webkit-box-sizing: border-box;box-sizing: border-box;">Date</span><span class="localized-date" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-left: 14%;min-width: 500px;max-width:500px;">{Date}</span>
-                            </div>
-                            <div class="terms-item-view" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex;padding: .1rem 0;">
-                                <span style="-webkit-box-sizing: border-box;box-sizing: border-box;">Terms</span><span class="invoice-term-value" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-left: 12%;min-width: 500px;max-width: 500px;">{Term}</span>
-                            </div>
+                <div class="invoice-detail-title content-block" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-left: 16px;padding-right: 16px;">
+                    <div class="d-flex justify-content-between" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: flex!important;-ms-flex-pack: justify!important;justify-content: space-between!important;">
+                        <div class="invoice-title" style="-webkit-box-sizing: border-box;box-sizing: border-box;padding-top: 30px;">
+                            <h2 style="-webkit-box-sizing: border-box;box-sizing: border-box;margin-top: 0;margin-bottom: 30px;font-weight: 700;line-height: 1.2;font-size: 2rem;orphans: 3;widows: 3;page-break-after: avoid;text-rendering: optimizeLegibility;-moz-osx-font-smoothing: grayscale;font-smoothing: antialiased;-webkit-font-smoothing: antialiased;color: #555;width: 100%;display: inline-block;font-family: 'Open Sans',Helvetica,Arial,sans-serif!important;">
+                                <span data-selector="invoice-title" style="-webkit-box-sizing: border-box;box-sizing: border-box;">
+                                    {refundTitle}
+                                </span>
+                            </h2>
                         </div>
                     </div>
                 </div>
@@ -170,7 +121,7 @@ function isSnapshot() { return /reactsnap/i.test(navigator.userAgent) }function 
                             </tr>
                         </thead>
                         <tbody class="invoice-items" style="-webkit-box-sizing: border-box;box-sizing: border-box;display: block;max-width: 560px;">
-                            {Ticket}
+                            {ticketList}
                         </tbody>
                     </table>
                 </div>
