--- a/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/creditCard/ListCreditCardView.html
@@ -114,7 +114,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     </script>
     <div class="login">
-        <div class="main-agileits" style="width: 45%;">
+        <div class="main-agileits">
             <div class="form-w3agile form">
                 <h3>View List Credit card</h3>
                 <table class="table table-responsive table-striped">
